--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,224 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.2
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.3
+apturl==0.5.2
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==25.3.0
+autobahn==17.10.1
+Automat==0.8.0
+bcrypt==3.1.7
+beautifulsoup4==4.13.4
+billiard==4.2.1
 blinker==1.9.0
+Brlapi==0.7.0
+bs4==0.0.2
+cachetools==5.5.2
+cbor==1.0.0
+celery==5.5.3
+certifi==2025.4.26
+chardet==3.0.4
+charset-normalizer==3.4.2
 click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+cupshelpers==1.0
+Cython==0.29.14
+daphne==2.4.1
+dataclasses-json==0.6.7
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.0
+distro==1.4.0
+distro-info==0.23+ubuntu1.1
+Django==5.2.1
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+dotenv==0.9.9
+duplicity==0.8.12.0
+entrypoints==0.3
+exceptiongroup==1.3.0
+faiss-cpu==1.11.0
+fastapi==0.116.1
+fasteners==0.14.1
+filelock==3.18.0
+filetype==1.2.0
 Flask==3.1.1
+flask-cors==6.0.0
+Flask-SQLAlchemy==3.1.1
+frozenlist==1.6.0
+fsspec==2025.5.1
+future==0.18.2
+google-ai-generativelanguage==0.6.18
+google-api-core==2.24.2
+google-auth==2.40.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.2
+grpcio==1.72.0rc1
+grpcio-status==1.72.0rc1
+gunicorn==23.0.0
+h11==0.16.0
+hf-xet==1.1.2
+html5lib==1.0.1
+httpcore==1.0.9
+httplib2==0.14.0
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.32.1
+hyperlink==19.0.0
+idna==3.10
+importlib-metadata==1.5.0
+incremental==16.10.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+keyring==18.0.1
+kombu==5.5.4
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-core==0.3.61
+langchain-google-genai==2.1.4
+langchain-huggingface==0.2.0
+langchain-text-splitters==0.3.8
+langsmith==0.3.42
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.5.0
+lz4==3.0.2+dfsg
+macaroonbakery==1.3.1
+Mako==1.1.0
 MarkupSafe==3.0.2
-pytube==15.0.0
+marshmallow==3.26.1
+monotonic==1.5
+more-itertools==4.2.0
+mpmath==1.3.0
+multidict==6.4.4
+mypy_extensions==1.1.0
+mysql-connector-python==9.3.0
+netifaces==0.10.4
+networkx==3.4.2
+numpy==2.2.6
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+oauthlib==3.1.0
+olefile==0.46
+orjson==3.10.18
+packaging==24.2
+paramiko==2.6.0
+pexpect==4.6.0
+pillow==11.2.1
+prompt_toolkit==3.0.51
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==6.31.0
+py-ubjson==0.14.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycairo==1.16.2
+pycups==1.9.73
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==2.10.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pypng==0.0.20
+PyQRCode==1.2.1
+pyRFC3339==1.1
+python-apt==2.0.1+ubuntu0.20.4.1
+python-dateutil==2.9.0.post0
+python-debian==0.1.36+ubuntu1.1
+python-dotenv==1.1.0
+python-snappy==0.5.3
+PyTrie==0.2
+pytz==2019.3
+pyxdg==0.26
+PyYAML==6.0.2
+redis==6.2.0
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+requests-unixsocket==0.2.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+SecretStorage==2.3.1
+sentence-transformers==4.1.0
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+sqlparse==0.5.3
+starlette==0.47.2
+sympy==1.14.0
+systemd-python==234
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.0
+tqdm==4.67.1
+transformers==4.52.3
+triton==3.3.0
+twilio==9.6.3
+Twisted==18.9.0
+txaio==2.10.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+u-msgpack-python==2.1
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==2.4.0
+usb-creator==0.3.7
+uvicorn==0.35.0
+vboxapi==1.0
+vine==5.1.0
+virtualenv==20.0.17
+wadllib==1.3.3
+wcwidth==0.2.13
+webencodings==0.5.1
 Werkzeug==3.1.3
-yt-dlp==2025.7.21
+wsaccel==0.6.2
+xkit==0.0.0
+yarl==1.20.0
+zipp==1.0.0
+zope.interface==4.7.1
+zstandard==0.23.0
