--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==25.0
-pytube==15.0.0
+
 Werkzeug==3.1.3
 yt-dlp==2025.7.21
+# requirements.txt
+yt-dlp==2023.11.16
+Flask==2.3.2
+gunicorn==20.1.0
